# celine-policies

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  clients.yaml  docker-compose.yaml  dump.yaml  pyproject.toml  skaffold.yaml  taskfile.yaml
.github/workflows/: build-keycloak.yaml
common/: groups.rego  utils.rego
config/caddy/: Caddyfile
config/keycloak/import/: realm-celine.json
config/keycloak/themes/: README.md
config/keycloak/themes/rec/login/: error.ftl  login-otp.ftl  login-reset-password.ftl  login-update-password.ftl  login.ftl  register.ftl  template.ftl
config/keycloak/themes/rec/login/messages/: messages_en.properties
config/keycloak/themes/rec/login/resources/css/: login.css
config/mosquitto/: mosquitto.conf
config/oauth2-proxy/: oauth2-proxy.cfg
data/celine/: roles.json
dataset/: README.md  access.rego  access_test.rego
docs/: api-reference.md  architecture.md  celine-policy-architecture-guide.md  deployment.md  getting-started.md  mqtt-integration.md  policy_model.md  scopes-and-permissions.md
keycloak/: Dockerfile  README.md  version.txt
keycloak/themes/rec/login/: info.ftl  login.ftl  template.ftl  theme.properties
keycloak/themes/rec/login/messages/: messages_en.properties  messages_it.properties
keycloak/themes/rec/login/resources/css/: login.css
policies/celine/: authz.rego  authz_test.rego  dataset_test.rego  mqtt.rego  mqtt_test.rego  scopes.rego  scopes_test.rego
policies/celine/common/: access_levels.rego  subject.rego
policies/celine/dataset/: access.rego  access_test.rego  row_filter.rego
policies/celine/dt/: access.rego
policies/celine/mqtt/: acl.rego  acl_test.rego
policies/celine/pipeline/: state.rego
policies/celine/twin/: access.rego
policies/celine/userdata/: access.rego
policies/common/: groups.rego  utils.rego
policies/data/: celine.json
policies/dataset/: README.md  access.rego  access_test.rego
src/celine/mqtt_auth/: __init__.py  config.py  main.py  models.py  routes.py
src/celine/policies/: __init__.py  config.py  logs.py  main.py
src/celine/policies/api/: __init__.py  service.py
src/celine/policies/audit/: __init__.py  logger.py
src/celine/policies/auth/: __init__.py  jwt.py  subject.py
src/celine/policies/cli/: __init__.py  main.py
src/celine/policies/cli/keycloak/: __init__.py  client.py  commands.py  models.py  settings.py  sync.py
src/celine/policies/cli/keycloak/commands/: __init__.py  _utils.py  bootstrap.py  commands.py  set_password.py  set_user_organization.py  status.py  sync.py  sync_orgs.py  sync_users.py
src/celine/policies/engine/: __init__.py  cache.py  engine.py
src/celine/policies/models/: __init__.py  core.py  requests.py
src/celine/policies/routes/: __init__.py  authorize.py  dataset.py  deps.py  health.py  mqtt.py  pipeline.py
tests/: conftest.py  test_audit_configure_logging.py  test_audit_logger.py  test_authorize.py  test_config_and_logging.py  test_dataspace_scope.py  test_decision_cache.py  test_integration.py  test_jwt.py  test_mqtt.py  test_mqtt_acc.py  test_policy_engine.py  test_policy_routing.py  test_routes_deps.py  test_subject_extraction.py  test_subject_extractor.py
tests/python/: test_engine.py  test_subject.py
