[project]
name = "celine-policies"
version = "1.1.1"
description = "CELINE Policy Authorization Service with embedded OPA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.28.0",
    "cachetools>=5.5.0",
    "structlog>=25.5.0",
    "celine-regorus>=0.5.0.post20260129052409",
    "celine-sdk>=1.1.0",
    "typer>=0.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
celine-policies = "celine.policies.cli.main:create_app"

[tool.uv]  # optional, helps uv handle locking
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Both packages live under src/ and share the celine namespace
only-include = ["src/celine/mqtt_auth", "src/celine/policies"]
sources = {"src" = ""}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "dumpster-cli>=1.4.0",
    "pytest-asyncio>=1.3.0",
    "python-semantic-release>=10.5.3",
]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
update_pyproject_toml = true 
commit_parser = "conventional"

build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "chore"]
parse_squash_commits = true
ignore_merge_commits = true

